# sheep-transfer

./: .gitignore  Config.hs  DataTypes.hs  Parser.hs  ProtocolReader.hs  ProtocolWriter.hs  Serialize.hs  SheepServer.hs  index.html  makefile  sheep-cli.hs  sheep-gtk.hs  sheep-transfer.cabal  sheep.hs
cabal-dev/share/doc/cairo-0.12.4/html/: Graphics-Rendering-Cairo-Matrix.html  Graphics-Rendering-Cairo.html  cairo.haddock  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_Graphics-Rendering-Cairo-Matrix.html  mini_Graphics-Rendering-Cairo.html
cabal-dev/share/doc/cereal-0.3.5.2/html/: Data-Serialize-Builder.html  Data-Serialize-Get.html  Data-Serialize-IEEE754.html  Data-Serialize-Put.html  Data-Serialize.html  cereal.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Serialize-Builder.html  mini_Data-Serialize-Get.html  mini_Data-Serialize-IEEE754.html  mini_Data-Serialize-Put.html  mini_Data-Serialize.html
cabal-dev/share/doc/cpphs-1.16/html/: Language-Preprocessor-Cpphs.html  Language-Preprocessor-Unlit.html  cpphs.haddock  doc-index.html  index-frames.html  index.html  mini_Language-Preprocessor-Cpphs.html  mini_Language-Preprocessor-Unlit.html
cabal-dev/share/doc/data-default-0.5.3/html/: Data-Default.html  data-default.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Default.html
cabal-dev/share/doc/data-default-class-0.0.1/html/: Data-Default-Class.html  data-default-class.haddock  doc-index.html  index.html
cabal-dev/share/doc/data-default-instances-base-0.0.1/html/: Data-Default-Instances-Base.html  data-default-instances-base.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Default-Instances-Base.html
cabal-dev/share/doc/data-default-instances-containers-0.0.1/html/: Data-Default-Instances-Containers.html  data-default-instances-containers.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Default-Instances-Containers.html
cabal-dev/share/doc/data-default-instances-dlist-0.0.1/html/: Data-Default-Instances-DList.html  data-default-instances-dlist.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Default-Instances-DList.html
cabal-dev/share/doc/data-default-instances-old-locale-0.0.1/html/: Data-Default-Instances-OldLocale.html  index.html  (+4 more)
lib/: Config.hs  DataTypes.hs  Serialize.hs  SheepServer.hs
src/: sheep-cli.hs  sheep-gtk.hs
(+1239 files in other folders)
