Name:                sheep-transfer
Version:             0.1
Synopsis:            Transfer files between computers in LAN network
License:             BSD3
License-file:        LICENSE
Author:              Krzysztof Skrzętnicki
Maintainer:          gtener@gmail.com
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.2

Executable sheep-transfer
  Main-is:             sheep.hs
  Build-depends:       base, unordered-containers, 
                       network > 2.3.0.0, network-multicast, bytestring, filepath, cereal,
                       process, random, utf8-string, derive, stm
  Other-modules:       DataTypes, Serialize
  